--- a/sass/site/layout/_layout-skin-1.scss
+++ b/sass/site/layout/_layout-skin-1.scss
@@ -73,6 +73,9 @@ body{
 			margin-top: 10px;
 			border-bottom: 0;
 		}
+		.ast-article-post:first-child{
+			margin-top: 0;
+		}
 		@media (max-width: $mx-col-sm) {
 			.ast-article-post:last-child{
 				margin-bottom: 0;
